# canteenappLLM_P

./: .replit  food_ordering_agent.py  main.py  pyproject.toml  replit.md
static/: index.html
